<resources>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="app_name">SalesPlatform</string>
    <string name="title_activity_home">eBaoTech © SalesPlatform</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="section_home_label">Home</string>
    <string name="section_customer_label">Customer</string>
    <string name="section_fna_label">FNA</string>
    <string name="section_quotation_label">Quotation &amp; Illustration</string>
    <string name="section_policy_label">Policy</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_menu__setting">Setting</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- customer information editing-->
    <string name="title_customer_edit_list">Customer Detail</string>
    <string name="title_customer_edit_detail">CustomerList Detail</string>
    <string name="title_quotation_edit_list">Quotation Edit</string>
    <string name="title_quotation_edit_detail">Quotation Edit Detail</string>

    <string name="quotation_edit__basic_info_tab">Customer Info</string>
    <string name="quotation_edit__quote_tab">Quote</string>
    <string name="quotation_edit__pdf_tab">PDF Generation</string>

    <string name="title_customer_list">Customers</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_basic">Basic</string>
    <string name="title_customer_address">Address</string>
    <string name="title_customer_family">Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_customer_name">Name: </string>
    <string name="label_customer_title">Title: </string>
    <string name="label_customer_birthday">Birthday: </string>
    <string name="label_customer_age">Age: </string>
    <string name="label_customer_age_from">Age From: </string>
    <string name="label_customer_age_to">Age To: </string>
    <string name="label_customer_gender">Gender: </string>
    <string name="label_customer_country">Country: </string>
    <string name="label_customer_comments">Comments: </string>
    <string name="label_customer_marital_status">Marital Status: </string>
    <string name="label_customer_id_no">ID Number: </string>
    <string name="label_customer_mobile">Mobile Phone: </string>
    <string name="label_customer_email">Email Address: </string>
    <string name="label_customer_address_type">Address Type: </string>
    <string name="label_customer_address_detail">Address: </string>
    <string name="label_customer_address_city">City/State: </string>
    <string name="label_customer_address_postcode">Postal Code: </string>
    <string name="label_address_table_header_type">Address Type</string>
    <string name="label_address_table_header_detail">Address</string>
    <string name="label_address_table_header_city">City/State</string>
    <string name="label_address_table_header_country">Country</string>
    <string name="label_address_table_header_postcode">Postal Code</string>
    <string name="label_table_header_action">Actions</string>
    <string name="label_customer_family_relation">Relationship: </string>
    <string name="label_family_table_header_relation">Relationship</string>
    <string name="label_family_table_header_name">Name</string>
    <string name="label_family_table_header_age">Age</string>
    <string name="label_family_table_header_gender">Gender</string>
    <string name="label_family_table_header_mobile">Mobile</string>
    <string name="label_family_table_header_email">Email</string>

    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <string name="button_search">Search</string>
    <string name="button_reset">Reset</string>
</resources>
