<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ebaotech.salesplatform.ui.customer.CustomerBasicFragment"
    android:padding="@dimen/spacing_large">

  <!-- TODO: Update blank fragment layout -->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_family_relation"/>
      <Spinner
          android:id="@+id/edit_relation"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:entries="@array/customer_family_relation_arrays"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_name"
          />
      <EditText android:id="@+id/edit_name"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_gender"/>
      <RadioGroup
          android:id="@+id/radioSex"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:orientation="horizontal"
          android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />
      </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_age"/>
      <EditText
          android:id="@+id/edit_age"
          android:inputType="number"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_mobile"/>
      <EditText
          android:id="@+id/edit_mobile"
          android:layout_weight="1"
          android:inputType="phone"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_email"/>
      <EditText
          android:id="@+id/edit_email"
          android:layout_weight="1"
          android:inputType="phone"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="bottom|end"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:stretchColumns="*"
        android:id="@+id/tableLayout"
        android:background="@color/material_lime_A100">
      <TableRow android:layout_width="0dp">
        <TextView android:text="@string/label_family_table_header_relation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"/>
        <TextView android:text="@string/label_family_table_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1">
        </TextView>
        <TextView android:text="@string/label_family_table_header_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2">
        </TextView>
        <TextView android:text="@string/label_family_table_header_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3">
        </TextView>
        <TextView android:text="@string/label_family_table_header_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4">
        </TextView>
        <TextView android:text="@string/label_family_table_header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="5">
        </TextView>
        <TextView android:text="@string/label_table_header_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="6">
        </TextView>
      </TableRow>

    </TableLayout>
  </LinearLayout>

</FrameLayout>
