<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ebaotech.salesplatform.ui.customer.CustomerBasicFragment"
    android:padding="@dimen/spacing_large">

  <!-- TODO: Update blank fragment layout -->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_customer_address_type"/>
    <Spinner
        android:id="@+id/edit_type"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/customer_address_type_arrays"/>
  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_address_detail"
          />
      <EditText android:id="@+id/edit_detail"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_country"
          />
      <Spinner
          android:id="@+id/edit_country"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:entries="@array/customer_country_arrays"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_address_city"
          />
      <EditText android:id="@+id/edit_city"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_address_postcode"
          />
      <EditText android:id="@+id/edit_postcode"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:inputType="number"
          android:layout_height="wrap_content"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="bottom|end"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:stretchColumns="0,1,2,3,4"
        android:id="@+id/tableLayout">
      <TableRow android:layout_width="0dp" android:background="@color/primary" android:textAlignment="center">
        <TextView android:text="@string/label_address_table_header_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:textSize="@dimen/tab_label_large" android:textStyle="bold"/>
        <TextView android:text="@string/label_address_table_header_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:textSize="@dimen/tab_label" android:textStyle="bold">
        </TextView>
        <TextView android:text="@string/label_address_table_header_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:textSize="@dimen/tab_label_large" android:textStyle="bold">
        </TextView>
        <TextView android:text="@string/label_address_table_header_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:textSize="@dimen/tab_label_large" android:textStyle="bold">
        </TextView>
        <TextView android:text="@string/label_address_table_header_postcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:textSize="@dimen/tab_label_large" android:textStyle="bold">
        </TextView>
        <TextView android:text="@string/label_table_header_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:textSize="@dimen/tab_label_large" android:textStyle="bold">
        </TextView>
      </TableRow>

    </TableLayout>
  </LinearLayout>

</FrameLayout>
