<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ebaotech.salesplatform.ui.customer.CustomerBasicFragment"
    android:padding="@dimen/spacing_large">

  <!-- TODO: Update blank fragment layout -->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_customer_name"
        />
    <EditText android:id="@+id/edit_name"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
  </LinearLayout>
  <!--<LinearLayout-->
      <!--android:layout_width="match_parent"-->
      <!--android:layout_height="wrap_content"-->
      <!--android:orientation="horizontal">-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/label_customer_title"/>-->
    <!--<Spinner-->
        <!--android:id="@+id/edit_title"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:entries="@array/customer_title_arrays"/>-->
  <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
      <!--<TextView-->
          <!--android:layout_width="wrap_content"-->
          <!--android:layout_height="wrap_content"-->
          <!--android:text="@string/label_customer_birthday"/>-->
      <!--<EditText-->
          <!--android:id="@+id/edit_birthday"-->
          <!--android:inputType="date"-->
          <!--android:layout_weight="1"-->
          <!--android:layout_width="0dp"-->
          <!--android:layout_height="wrap_content"/>-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_age"/>
      <EditText
          android:id="@+id/edit_age"
          android:inputType="number"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_gender"/>
      <RadioGroup
          android:id="@+id/radioSex"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:orientation="horizontal"
          android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />
      </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_country"/>
      <Spinner
          android:id="@+id/edit_country"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:entries="@array/customer_country_arrays"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_comments"/>
      <EditText
          android:id="@+id/edit_comments"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_id_no"/>
      <EditText
          android:id="@+id/edit_id_number"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_marital_status"/>
      <Spinner
          android:id="@+id/edit_marital_status"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:entries="@array/customer_marital_status_arrays"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_mobile"/>
      <EditText
          android:id="@+id/edit_mobile"
          android:layout_weight="1"
          android:inputType="phone"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_customer_email"/>
      <EditText
          android:id="@+id/edit_email"
          android:layout_weight="1"
          android:inputType="textEmailAddress"
          android:layout_width="0dp"
          android:layout_height="wrap_content"/>
    </LinearLayout>
  </LinearLayout>
</FrameLayout>
